--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,7 @@ body
     width: 70;
     padding: 1cm;
     text-align: left;
-    border: 1px solid #000;
+    border: 1px solid #ddd;
     margin: 0 auto;
 }
 #container h1
