--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,26 @@
 body
 {
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
 
 #cabecera
@@ -16,13 +31,6 @@ body
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
-}
-
-#cabecera #tagline
-{
-    padding: 0 0 0 1em;
-    font-weight: normal;
-    font-size: 0.8em;
 }
 
 #container
@@ -40,5 +48,6 @@ body
 }
 #post
 {
+    background:  white;
     padding: 1em;
 }
